# tea

./: .gitignore  CMakeLists.txt  README.md  TSandbox.cpp  TeaConfig.h.in  compile_commands.json  docs.md  nctest.cpp
.cache/clangd/index/: TestConfig.h.2E9A7E8F2D8B1123.idx  nctest.cpp.D27FE499647F412F.idx
src/: TApplication.hpp  TComponent.hpp  TContainerNode.hpp  TContent.hpp  TVec2.hpp  TWindow.hpp
src/tea/component/: TApplication.hpp  TCheckbox.hpp  TComponent.hpp  TContent.hpp  TStyle.hpp
src/tea/screen/: TApplication.hpp  TBody.cpp  TBorder.cpp  TCollapsed.cpp  THeader.cpp  TScreen.hpp
src/tea/utils/: TVec.hpp  TVec2.hpp
tests/: TApplicationSuite.cpp  TComponentSuite.cpp  TContentSuite.cpp  TStyleSuite.cpp  TTestNode.cpp  TVec2Suite.cpp  TVecSuite.cpp  all.cpp
